[package]
name = "my-rox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"anyhow" = "1.0"
"clap" = "2.0"
"lazy_static" = "1.4"
"maplit" = "1.0"
"utf-8" = "0.7"
"owned_chars" = "0.3"
"num_enum" = "0.5"